--- a/searchResults.html
+++ b/searchResults.html
@@ -104,7 +104,7 @@
                         <P class="cardDesc">description<br>features<br>whats in the box</P>
                     </div>
                     <div class="float-child">
-                        <a href="checkout.html"><img src="images/PlayStationImage.png" alt="PlayStation Image" style="width:232px;height:232px;"></a>
+                        <a href="checkout.html"><img src="images/PlaystationImage.png" alt="PlayStation Image" style="width:232px;height:232px;"></a>
                     </div>
                 </div>
             </div>
