--- a/checkout.html
+++ b/checkout.html
@@ -222,7 +222,7 @@
 
         <!-- Submit Button -->
         <section>
-            <button type="submit">Place Order</button>
+            <a class="btn btn-outline-primary" href="checkoutConfirmation.html">Place Order</a>
         </section>
     </div>
 
