Post Progress Check Changes
Product Pages, etc.

--- a/searchResults.html
+++ b/searchResults.html
@@ -15,13 +15,13 @@
             overflow-x: auto;
         }
         .card-body:nth-child(2n+1) { 
-            background: rgb(142, 142, 128); 
+            background: rgb(130, 212, 187); 
         } 
         .card-body:nth-child(2n+2) { 
-            background: rgb(56, 56, 56); 
+            background: rgb(185, 108, 108); 
         }
         .card-body {
-            color: white;
+            color: rgb(0, 0, 0);
             font-size: 48px;
             min-width: 1200px;
             margin-right: 5px;
@@ -51,7 +51,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">ElderCart</a>
+          <a class="navbar-brand" href="#">ElderCart</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -84,16 +84,16 @@
 
       <div class="container-fluid py-2">
         <div class="horizontal-scrollable">
-        <h3 class="font-weight-light">Your Top 3:</h3>
+        <h3 class="font-weight-light">Here are three great options! Click on a product to learn more.</h3>
         <div class="d-flex flex-row flex-nowrap">
 
             <div class="card card-body">Xbox
                 <div class="float-container">
                     <div class="float-child">
-                        <P class="cardDesc">description<br>features<br>whats in the box</p>
+                        <P class="cardDesc">Description<br>Features<br>Whats In The Box</p>
                     </div>
                     <div class="float-child">
-                        <a href="checkout.html"><img src="images/XboxImage.png" alt="Xbox Image" style="width:232px;height:232px;"></a>
+                        <a href="XboxProductPage.html"><img src="XboxImage.png" alt="Xbox Image" style="width:232px;height:232px;"></a>
                     </div>
                 </div>
             </div>
@@ -101,10 +101,10 @@
             <div class="card card-body">PlayStation
                 <div class="float-container">
                     <div class="float-child">
-                        <P class="cardDesc">description<br>features<br>whats in the box</P>
+                        <P class="cardDesc">Description<br>Features<br>Whats In The Box</P>
                     </div>
                     <div class="float-child">
-                        <a href="checkout.html"><img src="images/PlaystationImage.png" alt="PlayStation Image" style="width:232px;height:232px;"></a>
+                        <a href="PlayStationProductPage.html"><img src="PlayStationImage.png" alt="PlayStation Image" style="width:232px;height:232px;"></a>
                     </div>
                 </div>
             </div>
@@ -112,10 +112,10 @@
             <div class="card card-body">Switch
                 <div class="float-container">
                     <div class="float-child">
-                        <P class="cardDesc">description<br>features<br>whats in the box</P>
+                        <P class="cardDesc">Description<br>Features<br>Whats In The Box</P>
                     </div>
                     <div class="float-child">
-                        <a href="checkout.html"><img src="images/SwitchImage.png" alt="Switch Image" style="width:232px;height:232px;"></a>
+                        <a href="SwitchProductPage.html"><img src="SwitchImage.png" alt="Switch Image" style="width:232px;height:232px;"></a>
                     </div>
                 </div>
             </div>
