--- a/PlayStationProductPage.html
+++ b/PlayStationProductPage.html
@@ -8,6 +8,7 @@
   <!-- Add Bootstrap CSS link here -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="app.js"> </script>
 </head>
 <body>
   <div class="container mt-5">
@@ -16,13 +17,13 @@
         <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="PlaystationImage.png" class="d-block w-100" alt="PlayStation Image">
+              <img src="images/PlaystationImage.png" class="d-block w-100 product-picture" alt="PlayStation Image">
             </div>
             <div class="carousel-item">
-              <img src="XboxImage.png" class="d-block w-100" alt="Xbox Image">
+              <img src="images/XboxImage.png" class="d-block w-100" alt="Xbox Image">
             </div>
             <div class="carousel-item">
-              <img src="SwitchImage.png" class="d-block w-100" alt="Switch Image">
+              <img src="images/SwitchImage.png" class="d-block w-100" alt="Switch Image">
             </div>
           </div>
           <a class="carousel-control-prev" href="#productCarousel" role="button" data-bs-slide="prev">
@@ -36,11 +37,11 @@
         </div>
       </div>
       <div class="col-md-6">
-        <h2 class="display-4">PlayStation</h2>
+        <h2 class="display-4 product-name">PlayStation</h2>
         <p class="lead">Product Description</p>
-        <p class="h4">Price: $499.99</p>
+        <p class="h4 product-price">Price: $499.99</p>
         <p class="h4">Elder Rating: 4.8 stars</p>
-        <a target="_blank" class="btn btn-primary btn-lg" href="checkout.html">Add To Cart</a>
+        <a target="_blank" class="btn btn-primary btn-lg">Add To Cart</a>
       </div>
     </div>
 
