Add shopping cart feature and redesigned search results

--- a/cart.html
+++ b/cart.html
@@ -81,39 +81,41 @@
           </div>
         </div>
       </div>
-
-      <div class="row border-top border-bottom">
-        <div class="row align-items-center product-item">
-          <div class="col-2"><img src="https://placehold.co/100x100" alt="" class="img-fluid"></div>
-          <div class="col">
-            <div class="row cart-title">Xbox</div>
+      <div class="product-list">
+        <div class="row border-top border-bottom">
+          <div class="row align-items-center product-item">
+            <div class="col-2"><img src="https://placehold.co/100x100" alt="" class="img-fluid"></div>
+            <div class="col">
+              <div class="row cart-title">Xbox</div>
+            </div>
+            <div class="col cart-quantity">Quantity: ◻︎</div>
+            <div class="col cart-price">$X.XX</div>
           </div>
-          <div class="col cart-quantity">Quantity: ◻︎</div>
-          <div class="col cart-price">$X.XX</div>
+        </div>
+
+        <div class="row border-top border-bottom">
+          <div class="row align-items-center product-item">
+            <div class="col-2"><img src="https://placehold.co/100x100" alt="" class="img-fluid"></div>
+            <div class="col">
+              <div class="row cart-title">Switch</div>
+            </div>
+            <div class="col cart-quantity">Quantity: ◻︎</div>
+            <div class="col cart-price">$X.XX</div>
+          </div>
+        </div>
+
+        <div class="row border-top border-bottom">
+          <div class="row align-items-center product-item">
+            <div class="col-2"><img src="https://placehold.co/100x100" alt="" class="img-fluid"></div>
+            <div class="col">
+              <div class="row cart-title">Playstation</div>
+            </div>
+            <div class="col cart-quantity">Quantity: ◻︎</div>
+            <div class="col cart-price">$X.XX</div>
+          </div>
         </div>
       </div>
 
-      <div class="row border-top border-bottom">
-        <div class="row align-items-center product-item">
-          <div class="col-2"><img src="https://placehold.co/100x100" alt="" class="img-fluid"></div>
-          <div class="col">
-            <div class="row cart-title">Switch</div>
-          </div>
-          <div class="col cart-quantity">Quantity: ◻︎</div>
-          <div class="col cart-price">$X.XX</div>
-        </div>
-      </div>
-
-      <div class="row border-top border-bottom">
-        <div class="row align-items-center product-item">
-          <div class="col-2"><img src="https://placehold.co/100x100" alt="" class="img-fluid"></div>
-          <div class="col">
-            <div class="row cart-title">Playstation</div>
-          </div>
-          <div class="col cart-quantity">Quantity: ◻︎</div>
-          <div class="col cart-price">$X.XX</div>
-        </div>
-      </div>
 
 
 
