--- a/searchResults.html
+++ b/searchResults.html
@@ -9,12 +9,16 @@
     <!-- Include Bootstrap 5 CSS and JS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="style/mystyle.css">
+
     <script src="app.js"> </script>
 
-    <style>
+    <!-- <style>
         .horizontal-scrollable {
             overflow-x: auto;
         }
@@ -54,7 +58,7 @@
             padding: 20px;
             border: 2px solid rgb(44, 19, 19);
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -104,7 +108,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid py-2">
+    <!-- <div class="container-fluid py-2">
         <div class="horizontal-scrollable">
             <h3 class="font-weight-light">Here are three great options! Click on a product to learn more.</h3>
             <div class="d-flex flex-row flex-nowrap">
@@ -147,14 +151,43 @@
             </div>
         </div>
 
+    </div> -->
+
+    <div class="container-fluid ">
+        <div id="carouselExampleControls" class="carousel slide"  >
+            <div class="carousel-inner text-center">
+                <div class="carousel-item active">
+                    <img src="images/PlaystationImage.png" class="d-block mx-auto w-25" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/XboxImage.png" class="d-block mx-auto w-25" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/SwitchImage.png" class="d-block mx-auto w-25" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev"  type="button" data-bs-target="#carouselExampleControls"
+                 data-bs-slide="prev" data-bs-theme-value="dark">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next"   type="button" data-bs-target="#carouselExampleControls"
+                 data-bs-slide="next" data-bs-theme-value="dark">
+                <span class="carousel-control-next-icon" style="color:red" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </div>
+    
+
+
 
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/bootstrap.min.js"></script> -->
 </body>
 
 </html>
