--- a/checkoutConfirmation.html
+++ b/checkoutConfirmation.html
@@ -47,12 +47,9 @@
                         &#9776;
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Tutorials</a></li>
-                        <li><a class="dropdown-item" href="#">About Us</a></li>
+
+                        <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
+                        <li><a class="dropdown-item" href="aboutUs.html">About Us</a></li>
                     </ul>
                 </li>
             </div>
@@ -74,7 +71,7 @@
                     
                     
                 </div>
-                <a class="btn btn-outline-light" href="searchResults.html">Shop More</a>
+                <a class="btn btn-outline-light" href="index.html">Shop More</a>
             </div>
         </div>
     </div>
