--- a/index.html
+++ b/index.html
@@ -51,12 +51,8 @@
             &#9776;
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" href="#">Profile</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Tutorials</a></li>
-            <li><a class="dropdown-item" href="#">About Us</a></li>
+            <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
+            <li><a class="dropdown-item" href="aboutUs.html">About Us</a></li>
           </ul>
         </li>
       </div>
@@ -70,6 +66,19 @@
       </div>
     </div>
   </div>
+
+
+
+<div class="container">
+  <footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+      <li class="nav-item"><a href="return.html" class="nav-link px-2 text-body-secondary">Return Policy</a></li>
+      <li class="nav-item"><a class="nav-link px-2 text-body-secondary">Customer Support: 403-221-2341</a></li>
+    </ul>
+    <p class="text-center text-body-secondary">&copy; ElderCart Inc</p>
+  </footer>
+</div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
