--- a/searchResults.html
+++ b/searchResults.html
@@ -61,11 +61,11 @@
     </style> -->
 </head>
 
-<body>
+<body style="background-color: #f8f6f1;">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">ElderCart</a>
+            <a class="navbar-brand" href="index.html">ElderCart</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -79,7 +79,7 @@
                 <ul class="navbar-nav d-flex me-auto">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-secondary" type="submit">Search</button>
+                        <a class="btn btn-outline-secondary" href="searchResults.html">Search</a>
                     </form>
                 </ul>
 
@@ -96,12 +96,8 @@
                         &#9776;
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Tutorials</a></li>
-                        <li><a class="dropdown-item" href="#">About Us</a></li>
+                        <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
+                        <li><a class="dropdown-item" href="aboutUs.html">About Us</a></li>
                     </ul>
                 </li>
             </div>
@@ -128,12 +124,12 @@
                                     <div class="text-start">
                                         <p class="card-text"><strong>$399.99</strong></p>
                                         <p class="card-text">
-                                            Unveiling the new gaming console provided by Microsoft.
+                                            Unveiling the new 2023 gaming console provided by Sony.
                                         </p>
                                         <hr class="" />
                                         <p class="text-start">Features</p>
                                         <ul>
-                                            <li>10 GB RAM</li>
+                                            <li>16 GB RAM</li>
                                             <li>Backward Compatibility</li>
                                         </ul>
                                         <hr class="" />
@@ -167,8 +163,8 @@
                                         <hr class="" />
                                         <p class="text-start">Features</p>
                                         <ul>
-                                            <li>10 GB RAM</li>
-                                            <li>Backward Compatibility</li>
+                                            <li>16 GB RAM</li>
+                                            <li>4K Support</li>
                                         </ul>
                                         <hr class="" />
 
@@ -195,13 +191,13 @@
                                     <div class="text-start">
                                         <p class="card-text"><strong>$399.99</strong></p>
                                         <p class="card-text">
-                                            Unveiling the new gaming console provided by Microsoft.
+                                            Unveiling the new light gaming console provided by Nintendo.
                                         </p>
                                         <hr class="" />
                                         <p class="text-start">Features</p>
                                         <ul>
-                                            <li>10 GB RAM</li>
-                                            <li>Backward Compatibility</li>
+                                            <li>8 GB RAM</li>
+                                            <li>Nintendo-Exlusive Games</li>
                                         </ul>
                                         <hr class="" />
 
@@ -227,6 +223,16 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <div class="container">
+            <footer class="py-3 my-4">
+              <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="return.html" class="nav-link px-2 text-body-secondary">Return Policy</a></li>
+                <li class="nav-item"><a class="nav-link px-2 text-body-secondary">Customer Support: 403-221-2341</a></li>
+              </ul>
+              <p class="text-center text-body-secondary">&copy; ElderCart Inc</p>
+            </footer>
+          </div>
     </div>
 
 
