--- a/SwitchProductPage.html
+++ b/SwitchProductPage.html
@@ -1,29 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <body style="background-color: #8ba96783;"></body>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nintendo Switch</title>
-  <!-- Add Bootstrap CSS link here -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="app.js"> </script>
+
+<body style="background-color: #f8f6f1;"></body>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Nintendo Switch</title>
+<!-- Add Bootstrap CSS link here -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="style/mystyle.css">
+
+<script src="app.js"> </script>
 </head>
+
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">ElderCart</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        </ul>
+
+        <ul class="navbar-nav d-flex me-auto">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <a class="btn btn-outline-secondary" href="searchResults.html">Search</a>
+          </form>
+        </ul>
+
+        <a href="cart.html">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart"
+            viewBox="0 0 16 16">
+            <path
+              d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+          </svg>
+        </a>
+
+        <li class="nav-item dropdown d-flex btn">
+          <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            &#9776;
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
+            <li><a class="dropdown-item" href="aboutUs.html">About Us</a></li>
+          </ul>
+        </li>
+      </div>
+    </div>
+  </nav>
+
   <div class="container mt-5">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/SwitchImage.png" class="d-block w-100 product-picture" alt="Nintendo Switch Image">
+              <img src="images/SwitchImage.png" class="d-block w-100 product-picture" alt="PlayStation Image">
             </div>
             <div class="carousel-item">
-              <img src="images/PlaystationImage.png" class="d-block w-100" alt="PlayStation Image">
+              <img src="images/SwitchImage2.jpg" class="d-block w-100" alt="Xbox Image">
             </div>
             <div class="carousel-item">
-              <img src="images/XboxImage.png" class="d-block w-100" alt="Xbox Image">
+              <img src="images/SwitchImage3.jpg" class="d-block w-100" alt="Switch Image">
             </div>
           </div>
           <a class="carousel-control-prev" href="#productCarousel" role="button" data-bs-slide="prev">
@@ -31,17 +78,48 @@
             <span class="visually-hidden">Previous</span>
           </a>
           <a class="carousel-control-next" href="#productCarousel" role="button" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon" ariahidden="true"></span>
             <span class="visually-hidden">Next</span>
           </a>
         </div>
       </div>
-      <div class="col-md-6">
-        <h2 class="display-4 product-name">Nintendo Switch</h2>
-        <p class="lead">Product Description</p>
-        <p class="h4 product-price">Price: $499.99</p>
-        <p class="h4">Elder Rating: 4.8 stars</p>
-        <a target="_blank" class="btn btn-primary btn-lg">Add To Cart</a>
+      <div class="col-md-8 border">
+
+
+        <div class="row d-flex align-items-evenly ">
+
+          <div class="">
+            <h1 class="product-name">Nintendo Switch</h1>
+            <p class="h4 product-price">Price: $399.99</p>
+            <p class="h4">Elder Rating: 4.6 stars</p>
+            <p class="">Get the gaming system that lets you play the games you want, wherever you are, however you like.
+              Bring the full home gaming system experience with you to the park, on an airplane, in a car, or to a
+              friend’s apartment.</p>
+          </div>
+
+          <div class="pt-5 buying-buttons">
+            <a target="_blank" class="btn btn-warning btn-lg mt-4">Add To Cart</a>
+            <a href="checkout.html" class="btn btn-success btn-lg mt-4">Buy Now</a>
+          </div>
+
+
+
+
+
+        </div>
+
+
+
+
+        <div>
+
+        </div>
+
+        <div class="col">
+
+
+        </div>
+
       </div>
     </div>
 
@@ -77,13 +155,28 @@
           </tr>
           <tr>
             <td>Customer Reviews</td>
-            <td>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</td>
-            <td>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</td>
-            <td>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</td>
+            <td>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
+              rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+              explicabo.</td>
+            <td>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+              dolores eos qui ratione voluptatem sequi nesciunt.</td>
+            <td>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
+              aliquid ex ea commodi consequatur?</td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="return.html" class="nav-link px-2 text-body-secondary">Return Policy</a></li>
+        <li class="nav-item"><a class="nav-link px-2 text-body-secondary">Customer Support: 403-221-2341</a></li>
+      </ul>
+      <p class="text-center text-body-secondary">&copy; ElderCart Inc</p>
+    </footer>
+  </div>
 </body>
+
 </html>
