Fix Buy Now button

--- a/PlayStationProductPage.html
+++ b/PlayStationProductPage.html
@@ -98,7 +98,7 @@
 
           <div class="pt-5 buying-buttons">
             <a target="_blank" class="btn btn-warning btn-lg mt-4">Add To Cart</a>
-            <a target="_blank" class="btn btn-success btn-lg mt-4">Buy Now</a>
+            <a href="checkout.html" class="btn btn-success btn-lg mt-4">Buy Now</a>
           </div>
 
 
