--- a/SwitchProductPage.html
+++ b/SwitchProductPage.html
@@ -32,8 +32,8 @@
 
         <ul class="navbar-nav d-flex me-auto">
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <a class="btn btn-outline-secondary" href="searchResults.html">Search</a>
+            <input class="search-box form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <a class="btn btn-outline-secondary" onclick="return searchBehavior();">Search</a>
           </form>
         </ul>
 
