--- a/searchResults.html
+++ b/searchResults.html
@@ -78,8 +78,8 @@
 
                 <ul class="navbar-nav d-flex me-auto">
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <a class="btn btn-outline-secondary" href="searchResults.html">Search</a>
+                        <input class="search-box form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <a class="btn btn-outline-secondary" onclick="return searchBehavior();">Search</a>
                     </form>
                 </ul>
 
@@ -116,7 +116,10 @@
                     <div class="card d-block mx-auto" style="width: 48rem;">
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="images/PlaystationImage.png" class="card-img-top border-end p-3" alt="...">
+                                <a href="PlayStationProductPage.html">
+                                    <img src="images/PlaystationImage.png" class="card-img-top border-end p-3" alt="...">
+
+                                </a>
                             </div>
                             <div class="col-md-6">
                                 <div class="card-body text-s">
@@ -150,7 +153,10 @@
                     <div class="card d-block mx-auto" style="width: 48rem;">
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="images/XboxImage.png" class="card-img-top border-end p-3" alt="...">
+                                <a href="XboxProductPage.html">
+                                    <img src="images/XboxImage.png" class="card-img-top border-end p-3" alt="...">
+
+                                </a>
                             </div>
                             <div class="col-md-6">
                                 <div class="card-body text-s">
@@ -183,7 +189,10 @@
                     <div class="card d-block mx-auto" style="width: 48rem;">
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="images/SwitchImage.png" class="card-img-top border-end p-3" alt="...">
+                                <a href="SwitchProductPage.html">
+                                    <img src="images/SwitchImage.png" class="card-img-top border-end p-3" alt="...">
+
+                                </a>
                             </div>
                             <div class="col-md-6">
                                 <div class="card-body text-s">
