--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
         <ul class="navbar-nav d-flex me-auto">
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="What do I want?" aria-label="Search">
-            <a class="btn btn-outline-secondary" href="searchResults.html">Search</a>
+            <input class="search-box form-control me-2" type="search" placeholder="What do I want?" aria-label="Search">
+            <a class="btn btn-outline-secondary" onclick="return searchBehavior();">Search</a>
           </form>
         </ul>
 
