--- a/tutorials.html
+++ b/tutorials.html
@@ -116,12 +116,17 @@
                 </div>
                 <div class="carousel-item">
                         <div class="card-img-top mx-auto" style="height: 100%;">
-                            <img src="images/Tut2.jpg" class="img-fluid border-end p-3" alt="...">
+                            <a href="https://www.youtube.com/watch?v=5laZecw4CP8">
+                                <img src="images/Tut2.jpg" class="img-fluid border-end p-3" alt="...">
+                            </a>
                         </div>  
                 </div>
                 <div class="carousel-item">
                         <div class="card-img-top d-block mx-auto" style="height: 100%;">
-                            <img src="images/Tut3.jpg" class=" border-end p-3" alt="...">
+                            <a href="https://www.nerdwallet.com/article/credit-cards/ensure-online-credit-card-purchases-safe">
+                                <img src="images/Tut3.jpg" class=" border-end p-3" alt="...">
+
+                            </a>
                         </div>  
                 </div>
                 
