--- a/cart.html
+++ b/cart.html
@@ -39,7 +39,7 @@
           </form>
         </ul>
 
-        <a href="checkout.html">
+        <a href="cart.html">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart"
             viewBox="0 0 16 16">
             <path
