Added BackToResults btn to existing product pages

--- a/SwitchProductPage.html
+++ b/SwitchProductPage.html
@@ -59,6 +59,7 @@
   </nav>
 
   <div class="container mt-5">
+    <button class="btn btn-primary btn-lg mb-3" onclick="history.back()">Back to Results</button>
     <div class="row">
       <div class="col-md-4">
         <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
