Add product-specific search results capability

--- a/searchResultsXbox.html
+++ b/searchResultsXbox.html
@@ -111,7 +111,7 @@
         
         <div id="carouselExampleControls" class="carousel slide justify-content-center">
             <div class="carousel-inner text-center">
-                <div class="carousel-item playstation-item active">
+                <div class="carousel-item playstation-item">
 
                     <div class="card d-block mx-auto" style="width: 48rem;">
                         <div class="row">
@@ -148,7 +148,7 @@
                     </div>
                 </div>
 
-                <div class="carousel-item xbox-item">
+                <div class="carousel-item xbox-item active">
 
                     <div class="card d-block mx-auto" style="width: 48rem;">
                         <div class="row">
@@ -184,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item switch-item ">
+                <div class="carousel-item switch-item  ">
 
                     <div class="card d-block mx-auto" style="width: 48rem;">
                         <div class="row">
