--- a/searchResultsSwitch.html
+++ b/searchResultsSwitch.html
@@ -18,47 +18,6 @@
 
     <script src="app.js"> </script>
 
-    <!-- <style>
-        .horizontal-scrollable {
-            overflow-x: auto;
-        }
-
-        .card-body:nth-child(2n+1) {
-            background: rgb(130, 212, 187);
-        }
-
-        .card-body:nth-child(2n+2) {
-            background: rgb(185, 108, 108);
-        }
-
-        .card-body {
-            color: rgb(0, 0, 0);
-            font-size: 48px;
-            min-width: 1200px;
-            margin-right: 5px;
-            text-align: center;
-        }
-
-        .card-body img {
-            max-width: 40%;
-        }
-
-        P.cardDesc {
-            margin-left: 10px;
-        }
-
-        .float-container {
-            border: 3px solid #fff;
-            padding: 20px;
-        }
-
-        .float-child {
-            width: 50%;
-            float: left;
-            padding: 20px;
-            border: 2px solid rgb(44, 19, 19);
-        }
-    </style> -->
 </head>
 
 <body style="background-color: #f8f6f1;">
@@ -111,7 +70,7 @@
         
         <div id="carouselExampleControls" class="carousel slide justify-content-center">
             <div class="carousel-inner text-center">
-                <div class="carousel-item playstation-item active">
+                <div class="carousel-item playstation-item">
 
                     <div class="card d-block mx-auto" style="width: 48rem;">
                         <div class="row">
@@ -148,7 +107,7 @@
                     </div>
                 </div>
 
-                <div class="carousel-item xbox-item">
+                <div class="carousel-item xbox-item ">
 
                     <div class="card d-block mx-auto" style="width: 48rem;">
                         <div class="row">
@@ -184,7 +143,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item switch-item ">
+                <div class="carousel-item switch-item active">
 
                     <div class="card d-block mx-auto" style="width: 48rem;">
                         <div class="row">
