--- a/cart.html
+++ b/cart.html
@@ -20,7 +20,34 @@
 
 
 <body>
-
+  <style>
+    .search-box {
+background-color: white;
+font-size: 1.5rem; 
+padding: 10px; 
+width: 300px; 
+}
+    .search-box {
+        font-size: 1.5rem; 
+        padding: 20px; 
+        width: 600px; 
+    }
+    .navbar a svg.bi-cart {
+width: 30px; 
+height: 30px; 
+}
+.navbar-brand {
+      font-size: 3.0rem; 
+      padding: 20px; 
+    }
+    .nav-item.dropdown.d-flex.btn .nav-link {
+      font-size: 2.5rem; 
+      padding: 10px 20px; 
+    }
+    .dropdown-item {
+      font-size: 2.0rem;
+    }
+</style>
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">ElderCart</a>
@@ -182,10 +209,10 @@
   <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="return.html" class="nav-link px-2 text-body-secondary">Return Policy</a></li>
-        <li class="nav-item"><a class="nav-link px-2 text-body-secondary">Customer Support: 403-221-2341</a></li>
-      </ul>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" style="font-size: 1.5rem;">Home</a></li>
+        <li class="nav-item"><a href="return.html" class="nav-link px-2 text-body-secondary" style="font-size: 1.5rem;">Return Policy</a></li>
+        <li class="nav-item"><a class="nav-link px-2 text-body-secondary" style="font-size: 1.5rem;">Customer Support: 403-221-2341</a></li>
+      </ul>      
       <p class="text-center text-body-secondary">&copy; ElderCart Inc</p>
     </footer>
   </div>
